Update translations from Crowdin

--- a/locale/ru/money-UI.cfg
+++ b/locale/ru/money-UI.cfg
@@ -6,6 +6,6 @@ money-UI=Добавляет новый интерфейс к инвенторю 
 
 [money-UI]
 player-balance=Ваш баланс
-team-balance=Баланс комнады
+team-balance=Баланс команды
 
 
