--- a/locale/en/money-UI.cfg
+++ b/locale/en/money-UI.cfg
@@ -5,6 +5,9 @@ money-UI=Money UI (extension for EasyAPI)
 [mod-description]
 money-UI=Adds new UI into player's inventory to show money
 
+[mod-setting-name]
+MUI_show_player_money=Show player money
+
 [money-UI]
 player-balance=Your balance
 team-balance=Team's balance
