--- a/locale/ru/money-UI.cfg
+++ b/locale/ru/money-UI.cfg
@@ -4,6 +4,9 @@ money-UI=Money UI (расширение для EasyAPI)
 [mod-description]
 money-UI=Добавляет новый интерфейс к инвенторю игрока чтобы показать деньги
 
+[mod-setting-name]
+MUI_show_player_money=Показать деньги игрока
+
 [money-UI]
 player-balance=Ваш баланс
 team-balance=Баланс команды
