Update translations from Crowdin

--- a/locale/ru/money-UI.cfg
+++ b/locale/ru/money-UI.cfg
@@ -2,10 +2,10 @@
 [mod-name]
 money-UI=Money UI (расширение для EasyAPI)
 [mod-description]
-money-UI=Добавляет новый интерфейс к инвенторю игрока чтобы показать деньги
+money-UI=Добавляет в инвентарь игрока новый интерфейс, отображающий деньги
 
 [mod-setting-name]
-MUI_show_player_money=Показать деньги игрока
+MUI_show_player_money=Показывать деньги игрока
 
 [money-UI]
 player-balance=Ваш баланс
